--- a/script/tm_dgrl_Markdown.Rmd
+++ b/script/tm_dgrl_Markdown.Rmd
@@ -8,6 +8,7 @@ output: html_document
 ```{r data, include = FALSE}
 library(readr)
 library(dplyr)
+library(here)
 # Import DGRL version 17.5 (2021/12/15) 16531 References
 # https://faculty.washington.edu/jscholl/dgrl/index.php 
 # RIS file format converted to CSV using Zotero Reference Manager // Live link or Git better?
