Cambio data chunk test

--- a/script/tm_dgrl_Markdown.Rmd
+++ b/script/tm_dgrl_Markdown.Rmd
@@ -31,8 +31,8 @@ Scholars exploring labor-saving technologies have applied similar techniques exp
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars}
-summary(cars)
+```{r dgrl_v175, include = TRUE}
+summary(DGRLv17_5_zotero)
 ```
 
 ## Including Plots
