--- a/script/tm_dgrl_Markdown.Rmd
+++ b/script/tm_dgrl_Markdown.Rmd
@@ -32,11 +32,15 @@ Trends in global scientific output demonstrate a rapid and sustained increase in
 
 Scholars exploring labor-saving technologies have applied similar techniques expanding the methodological repertoire available and inspiring a similar pursuit for the exploration of the impact of technological change in a public sector context [@arduini2014; @montobbio2022].
 
+RQ
+
+Process
+
 ```{r dgrl_v175, include = TRUE}
 summary(DGRLv17_5_zotero)
 ```
 
-# Data
+# Literature Review
 
 You can also embed plots, for example:
 
@@ -45,5 +49,9 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+## Methods and Data
+
+
 
 ## References
