--- a/script/references.bib
+++ b/script/references.bib
@@ -52,3 +52,78 @@
 	doi = {10.1016/J.TECHFORE.2021.121122},
 	note = {Publisher: North-Holland}
 }
+
+@article{bornmann2021,
+	title = {Growth rates of modern science: a latent piecewise growth curve approach to model publication numbers from established and new literature databases},
+	author = {Bornmann, Lutz and Haunschild, Robin and Mutz, {Rüdiger}},
+	year = {2021},
+	month = {10},
+	date = {2021-10},
+	journal = {Humanities and Social Sciences Communications 2021 8:1},
+	pages = {1--15},
+	volume = {8},
+	number = {1},
+	doi = {10.1057/s41599-021-00903-w},
+	url = {https://www.nature.com/articles/s41599-021-00903-w},
+	note = {Publisher: Palgrave}
+}
+
+@article{bornmann2007,
+	title = {Multiple publication on a single research study: Does it pay? The influence of number of research articles on total citation counts in biomedicine},
+	author = {Bornmann, Lutz and Daniel, Hans-Dieter},
+	year = {2007},
+	month = {06},
+	date = {2007-06},
+	journal = {Journal of the American Society for Information Science and Technology},
+	pages = {1100--1107},
+	volume = {58},
+	number = {8},
+	doi = {10.1002/ASI.20531},
+	url = {https://onlinelibrary.wiley.com/doi/full/10.1002/asi.20531 https://onlinelibrary.wiley.com/doi/abs/10.1002/asi.20531 https://onlinelibrary.wiley.com/doi/10.1002/asi.20531},
+	note = {Publisher: John Wiley & Sons, Ltd}
+}
+
+@article{bornmann2015,
+	title = {Growth rates of modern science: A bibliometric analysis based on the number of publications and cited references},
+	author = {Bornmann, Lutz and Mutz, {Rüdiger}},
+	year = {2015},
+	month = {11},
+	date = {2015-11},
+	journal = {Journal of the Association for Information Science and Technology},
+	pages = {2215--2222},
+	volume = {66},
+	number = {11},
+	doi = {10.1002/asi.23329},
+	url = {http://doi.wiley.com/10.1002/asi.23329},
+	note = {Publisher: John Wiley and Sons Inc.}
+}
+
+@article{bornmann2015,
+	title = {Growth rates of modern science: A bibliometric analysis based on the number of publications and cited references},
+	author = {Bornmann, Lutz and Mutz, {Rüdiger}},
+	year = {2015},
+	month = {11},
+	date = {2015-11},
+	journal = {Journal of the Association for Information Science and Technology},
+	pages = {2215--2222},
+	volume = {66},
+	number = {11},
+	doi = {10.1002/asi.23329},
+	url = {http://doi.wiley.com/10.1002/asi.23329},
+	note = {Publisher: John Wiley and Sons Inc.}
+}
+
+@article{bornmann2007a,
+	title = {Multiple publication on a single research study: Does it pay? The influence of number of research articles on total citation counts in biomedicine},
+	author = {Bornmann, Lutz and Daniel, Hans-Dieter},
+	year = {2007},
+	month = {06},
+	date = {2007-06},
+	journal = {Journal of the American Society for Information Science and Technology},
+	pages = {1100--1107},
+	volume = {58},
+	number = {8},
+	doi = {10.1002/ASI.20531},
+	url = {https://onlinelibrary.wiley.com/doi/full/10.1002/asi.20531 https://onlinelibrary.wiley.com/doi/abs/10.1002/asi.20531 https://onlinelibrary.wiley.com/doi/10.1002/asi.20531},
+	note = {Publisher: John Wiley & Sons, Ltd}
+}
