Script for replicability

--- a/script/references.bib
+++ b/script/references.bib
@@ -127,3 +127,109 @@
 	url = {https://onlinelibrary.wiley.com/doi/full/10.1002/asi.20531 https://onlinelibrary.wiley.com/doi/abs/10.1002/asi.20531 https://onlinelibrary.wiley.com/doi/10.1002/asi.20531},
 	note = {Publisher: John Wiley & Sons, Ltd}
 }
+
+@article{scholl2021,
+	title = {The Digital Government Reference Library (DGRL) and its potential formative impact on Digital Government Research (DGR)},
+	author = {Scholl, Hans J.},
+	year = {2021},
+	month = {07},
+	date = {2021-07-22},
+	journal = {Government Information Quarterly},
+	pages = {101613},
+	doi = {10.1016/J.GIQ.2021.101613},
+	note = {Publisher: JAI}
+}
+
+@article{bannister2015,
+	title = {The great theory hunt: Does e-government really have a problem?},
+	author = {Bannister, Frank and Connolly, Regina},
+	year = {2015},
+	month = {01},
+	date = {2015-01-01},
+	journal = {Government Information Quarterly},
+	pages = {1--11},
+	volume = {32},
+	number = {1},
+	doi = {10.1016/J.GIQ.2014.10.003},
+	note = {Publisher: JAI}
+}
+
+@book{meyer2015,
+	title = {Knowledge machines: digital transformations of the sciences and humanities},
+	author = {Meyer, Eric T. and Schroeder, Ralph},
+	year = {2015},
+	date = {2015},
+	publisher = {The MIT Press},
+	series = {Infrastructures},
+	address = {Cambridge, Massachusetts}
+}
+
+@article{antons2020,
+	title = {The application of text mining methods in innovation research: current state, evolution patterns, and development priorities},
+	author = {Antons, David and {Grünwald}, Eduard and Cichy, Patrick and Salge, Torsten Oliver},
+	year = {2020},
+	month = {06},
+	date = {2020-06},
+	journal = {R&D Management},
+	pages = {329--351},
+	volume = {50},
+	number = {3},
+	doi = {10.1111/RADM.12408},
+	url = {https://onlinelibrary.wiley.com/doi/full/10.1111/radm.12408 https://onlinelibrary.wiley.com/doi/abs/10.1111/radm.12408 https://onlinelibrary.wiley.com/doi/10.1111/radm.12408},
+	note = {Publisher: John Wiley & Sons, Ltd}
+}
+
+@article{antons2020a,
+	title = {The application of text mining methods in innovation research: current state, evolution patterns, and development priorities},
+	author = {Antons, David and {Grünwald}, Eduard and Cichy, Patrick and Salge, Torsten Oliver},
+	year = {2020},
+	month = {06},
+	date = {2020-06},
+	journal = {R&D Management},
+	pages = {329--351},
+	volume = {50},
+	number = {3},
+	doi = {10.1111/RADM.12408},
+	url = {https://onlinelibrary.wiley.com/doi/full/10.1111/radm.12408 https://onlinelibrary.wiley.com/doi/abs/10.1111/radm.12408 https://onlinelibrary.wiley.com/doi/10.1111/radm.12408},
+	note = {Publisher: John Wiley & Sons, Ltd}
+}
+
+@article{asmussen2019,
+	title = {Smart literature review: a practical topic modelling approach to exploratory literature review},
+	author = {Asmussen, Claus Boye and {Møller}, Charles},
+	year = {2019},
+	month = {12},
+	date = {2019-12-01},
+	journal = {Journal of Big Data},
+	pages = {1--18},
+	volume = {6},
+	number = {1},
+	doi = {10.1186/S40537-019-0255-7/TABLES/6},
+	url = {https://journalofbigdata.springeropen.com/articles/10.1186/s40537-019-0255-7},
+	note = {Publisher: SpringerOpen}
+}
+
+@book{grimmer2022,
+	title = {Text as data: a new framework for machine learning and the social sciences},
+	author = {Grimmer, Justin and Roberts, Margaret E. and Stewart, Brandon M.},
+	year = {2022},
+	date = {2022},
+	publisher = {Princeton University Press},
+	address = {Princeton, New Jersey Oxford},
+	langid = {eng}
+}
+
+@article{barberá2021,
+	title = {Automated Text Classification of News Articles: A Practical Guide},
+	author = {{Barberá}, Pablo and Boydstun, Amber E. and Linn, Suzanna and McMahon, Ryan and Nagler, Jonathan},
+	year = {2021},
+	month = {01},
+	date = {2021-01-01},
+	journal = {Political Analysis},
+	pages = {19--42},
+	volume = {29},
+	number = {1},
+	doi = {10.1017/PAN.2020.8},
+	url = {https://www.cambridge.org/core/journals/political-analysis/article/abs/automated-text-classification-of-news-articles-a-practical-guide/10462DB284B1CD80C0FAE796AD786BC6},
+	note = {Publisher: Cambridge University Press}
+}
