--- a/script/tm_dgrl_Markdown.Rmd
+++ b/script/tm_dgrl_Markdown.Rmd
@@ -13,6 +13,7 @@ library(readr)
 library(dplyr)
 library(here)
 library(naniar)
+library(knitr)
 # Import DGRL version 17.5 (2021/12/15) 16531 References
 # https://faculty.washington.edu/jscholl/dgrl/index.php 
 # RIS file format converted to CSV using Zotero Reference Manager
@@ -21,6 +22,11 @@ DGRLv17_5_zotero <- read_csv(here("data", "DGRLv17.5_zotero.csv"))
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+```
+
+```{r redux db and rename var, include=FALSE}
+DGRLv17_5_zotero_redux <- DGRLv17_5_zotero %>% select(1:6, 9, 11)
+DGRLv17_5_zotero_redux <- DGRLv17_5_zotero_redux %>% rename(id = `Key`, type = `Item Type`, year = `Publication Year`, author = `Author`, doc_title = `Title`, pub_title = `Publication Title`, abstract = `Abstract Note`)
 ```
 
 ## Abstract
@@ -37,7 +43,7 @@ The advent of computerization and digitalization has had broad impacts in most a
 
 Research synthesis is part of the literature review process in which the extant scientific knowledge in each academic field is examined to help scholars understand the conceptual structure, themes, and debates to identify trends in the literature and potential areas for further research. This crucial task is labor-intensive, time-consuming, and restricted to a limited number of documents if conducted by traditional "manual" methods [@antons2020a; @asmussen2019]. Still, computer-assisted text analysis does not substitute human intervention, instead it "augments our reading ability" [@grimmer2022], human judgement is deemed necessary for the evaluation and validation of the outcome of these models [@barberá2021].
 
-```{r number and type of references in DGRLv17.5, include = FALSE}
+```{r all docs in DGRLv17.5, include = FALSE}
 rows_DGRLv17_5 <- nrow(DGRLv17_5_zotero)
 ```
 
@@ -49,7 +55,7 @@ RQ
 
 Process
 
-```{r dgrl_v175, include = TRUE}
+```{r dgrl_v175, include = FALSE}
 summary(DGRLv17_5_zotero)
 ```
 
@@ -59,21 +65,27 @@ You can also embed plots, for example:
 
 ## Methods and Data
 
-The Digital Government Research Library version 17.5 is a large curated repository of publications contributing to the field of Digital Government Research (DGR), in its raw form this version of the library has `r rows_DGRLv17_5` references, the lion's share being journal articles n=8278 and conference papers n=5493. 
+The Digital Government Research Library version 17.5 is a large curated repository of publications contributing to the field of Digital Government Research (DGR), in its raw form this version of the library has `r rows_DGRLv17_5` references, the lion's share being journal articles n=8278 and conference papers n=5493.
 
-```{r types of documents}
+```{r types of documents, echo=FALSE}
 by_type <- DGRLv17_5_zotero %>% count(`Item Type`) %>% arrange(desc(n))
-by_type
+kable(by_type, col.names = c("Document Type", "Number of Documents"), align = "cc", caption = "Table 1. Contents of DGRL v17.5 without pre-processing")
 ```
 
-```{r missing}
-vis_miss(DGRLv17_5_zotero, warn_large_data = FALSE)
-miss_all_db <- pct_miss(DGRLv17_5_zotero)
+```{r missing all db, include =FALSE}
+miss_all_db <- pct_miss(DGRLv17_5_zotero) %>% round(digits = 2)
 ```
 
-The data set has a large proportion of missing values `r miss_all_db` but not all columns are relevant to this exploration. 
+In its raw and unprocessed form, the data set has a large proportion of missing values `r miss_all_db`% but not all columns are relevant to this exploration. Just 8 columns will be retained as the contents are considered relevant covariates for the analysis proposed in this exercise.
 
-By visually exploring a reduced version of the dataset, it is evident that a large amount of relevant information is missing. 
+```{r visualization redux 8 var, echo=FALSE, include=TRUE}
+vis_miss(DGRLv17_5_zotero_redux)
+
+```
+
+By visually exploring the contents of the data set, it is evident that a large amount of relevant information is missing. Important covariates for the analysis have a substantial proportion of missing information like year, publication title and abstract, our main unit of analysis for the topic model.
+
+
 
 The workflow for reproducibility includes text pre-processing meaning data cleaning and data transformation. Some variables of interest are missing and there must be some data preparation before running creating a corpus.
 
