--- a/script/tm_dgrl_Markdown.Rmd
+++ b/script/tm_dgrl_Markdown.Rmd
@@ -17,9 +17,9 @@ library(knitr)
 # Import DGRL version 17.5 (2021/12/15) 16531 References
 # https://faculty.washington.edu/jscholl/dgrl/index.php 
 # RIS file format converted to CSV using Zotero Reference Manager
-DGRLv17_5_zotero <- read_csv(here("data", "DGRLv17.5_zotero.csv"))
+DGRLv17_5_RIS <- read_csv(here("data", "DGRLv17.5_RIS.csv"))
 ## Rename Variables of Interest
-DGRLv17_5_zotero <- DGRLv17_5_zotero %>% rename(id = `Key`, type = `Item Type`, year = `Publication Year`, author = `Author`, doc_title = `Title`, pub_title = `Publication Title`, abstract = `Abstract Note`)
+DGRLv17_5_RIS <- DGRLv17_5_RIS %>% rename(id = `Key`, type = `Item Type`, year = `Publication Year`, author = `Author`, doc_title = `Title`, pub_title = `Publication Title`, abstract = `Abstract Note`)
 
 ```
 
@@ -28,7 +28,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r select var of interest, include=FALSE}
-DGRLv17_5_zotero_redux <- DGRLv17_5_zotero %>% select(1:6, 9, 11)
+DGRLv17_5_RIS_redux <- DGRLv17_5_RIS %>% select(1:6, 9, 11)
 ```
 
 ## Abstract
@@ -46,8 +46,8 @@ The advent of computerization and digitalization has had broad impacts in most a
 Research synthesis is part of the literature review process in which the extant scientific knowledge in each academic field is examined to help scholars understand the conceptual structure, themes, and debates to identify trends in the literature and potential areas for further research. This crucial task is labor-intensive, time-consuming, and restricted to a limited number of documents if conducted by traditional "manual" methods [@antons2020a; @asmussen2019]. Still, computer-assisted text analysis does not substitute human intervention, instead it "augments our reading ability" [@grimmer2022], human judgement is deemed necessary for the evaluation and validation of the outcome of these models [@barberá2021].
 
 ```{r all docs and fields in DGRLv17.5, include = FALSE}
-rows_DGRLv17_5 <- nrow(DGRLv17_5_zotero)
-cols_DGRLv17_5 <- ncol(DGRLv17_5_zotero)
+rows_DGRLv17_5 <- nrow(DGRLv17_5_RIS)
+cols_DGRLv17_5 <- ncol(DGRLv17_5_RIS)
 ```
 
 This chapter explores the contents of The Digital Government Research Library in its version 17.5 (Scholl, 2021a), using a text as data approach and an unsupervised machine learning technique known as Latent Dirichlet Allocation (LDA). In its raw form, version 17.5 of the dataset contains `r rows_DGRLv17_5` references related to the Digital Government Research (DGR) domain, the most prevalent types of documents are conference papers (33%) and journal articles (50%). Previous explorations of this reference library using bibliometric and scientometric approaches have revealed the thematic evolution (Alcaide--Muñoz et al., 2017), and identified the most influential journals, conferences and leading scholars in the field (Scholl, 2021b). To our best knowledge this is the first attempt to run a topic model for a corpus in the field of Digital Government Research.
@@ -59,7 +59,7 @@ RQ
 Process
 
 ```{r dgrl_v175, include = FALSE}
-summary(DGRLv17_5_zotero)
+summary(DGRLv17_5_RIS)
 ```
 
 # Literature Review // Conceptual framework
@@ -71,25 +71,25 @@ You can also embed plots, for example:
 The Digital Government Research Library version 17.5 is a large curated repository of publications contributing to the field of Digital Government Research (DGR), in its raw form this version of the library has `r rows_DGRLv17_5` references and `r cols_DGRLv17_5` fields of related metadata, the lion's share being journal articles n=8278 and conference papers n=5493. The unit of analysis for this analysis is the abstract of these two types of documents: conference papers and journal articles.
 
 ```{r types of documents, echo=FALSE}
-by_type <- DGRLv17_5_zotero %>% count(`type`) %>% arrange(desc(n))
+by_type <- DGRLv17_5_RIS %>% count(`type`) %>% arrange(desc(n))
 kable(by_type, col.names = c("Document Type", "Number of Documents"), align = "cc", caption = "Table 1. Contents of DGRL v17.5 without pre-processing")
 ```
 
 ```{r missing all db, include =FALSE}
-miss_all_db <- pct_miss(DGRLv17_5_zotero) %>% round(digits = 2)
+miss_all_db <- pct_miss(DGRLv17_5_RIS) %>% round(digits = 2)
 ```
 
 In its raw and unprocessed form, the data set has a large proportion of missing values `r miss_all_db`%, mostly clustered in metadata not considered relevant for the analysis. Out of the 87 columns just 8 are deemed pertinent and may render some insights. The following visualizations explore the missing values in a subset of the DGRL containing journal articles and conference papers. 
 
-```{r visualization redux 8 var, echo=FALSE, include=TRUE, warning=FALSE}
-vis_miss(DGRLv17_5_zotero_redux)
+```{r visualization redux 8 var, echo=FALSE, include=TRUE, warning=FALSE, fig.cap= "Percentage of missing values in the variables of interest"}
+vis_miss(DGRLv17_5_RIS_redux)
 
 ```
 
 By visually exploring the contents of the data set, it is evident that a large amount of relevant information is missing. Important covariates for the analysis have a substantial proportion of missing information like year, publication title, also 16.16% of abstracts (our main unit of analysis) is missing. However, the amount of missing data is very different from conference papers and journal articles as seen in the following visualizations.
 
 ```{r visualization of journal articles, echo=FALSE, include=TRUE}
-articles <- DGRLv17_5_zotero_redux %>% group_by(`type`)%>%
+articles <- DGRLv17_5_RIS_redux %>% group_by(`type`)%>%
   filter(`type` == "journalArticle")
 vis_miss(articles)
 ```
@@ -97,11 +97,13 @@ vis_miss(articles)
 Almost 50% of the metadata related to the year of publication, a key covariate for this analysis, is missing for the journal articles' subsample. In addition, there is missing a third of the Digital Object Identifier (DOI) information. To solve this problem and not to lose this information deemed relevant, we will describe the use a Zotero add-on [DOI Manager](https://github.com/bwiernik/zotero-shortdoi) to search for the missing information by using the available DOI numbers.
 
 ```{r visualization of conference papers, echo=FALSE, include=TRUE}
-papers <- DGRLv17_5_zotero_redux %>% group_by(`type`) %>%
+papers <- DGRLv17_5_RIS_redux %>% group_by(`type`) %>%
   filter(`type` == "conferencePaper")
 vis_miss(papers)
 ```
 The conference paper subsample visualization tells a different story, most of the missing information is for the publication title column 73%, followed by the proportion of missing DOI information 64% and 21% of missing information for abstracts.
+
+Zotero Search for Metadata and Retract Watch
 
 
 
